@@ -20,6 +20,9 @@ PHP                                                                        NEWS
 - MbString:
   . Fixed bug GH-18901 (integer overflow mb_split). (nielsdos)
 
+- Standard:
+  . Fix misleading errors in printf(). (nielsdos)
+
 - Streams:
   . Fixed GH-13264 (fgets() and stream_get_line() do not return false on filter
     fatal error). (Jakub Zelenka)
